--- a/client/index.html
+++ b/client/index.html
@@ -281,6 +281,84 @@
       </div>
     </div>
     </section>
+
+
+
+
+    <!----------------------- footer------------------------- -->
+    <footer>
+      <div class="subscribe">
+        <div>
+          Subscribe to Us !
+        </div>
+        <div>
+          <input placeholder="Your email address" class="subscribe-input" type="text">
+          <button class="footer-btn">Subscribe</button>
+        </div>
+      </div>
+      <div class="main-footer">
+        <div class="footer-name">
+          <div class="name company-name">Un<span>Fold</span></div>
+          <div class="footer-desc">Unfold your ideas,experiences and knowledge here.</div>
+        </div>
+        <div class="footer-column">
+          <div class="footer-heading">
+            <h3>Company</h3>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-column">
+          <div class="footer-heading">
+            <h3>Help</h3>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Shipping</a></li>
+              <li><a href="#">Returns</a></li>
+              <li><a href="#">Order Status</a></li>
+              <li><a href="#">Payment Options</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-column">
+          <div class="footer-heading">
+            <h3>Follow Us</h3>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Youtube</a></li>
+              <li><a href="#">Pinterest</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-column">
+          <div class="footer-heading">
+            <h3>Download App</h3>
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#">Play Store</a></li>
+              <li><a href="#">App Store</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="rights">
+        &#169; UnFold-all right reserved
+      </div>
+    </footer>
   </body>
   <script>
     function leftScroll() {
