user profile page done

--- a/client/index.html
+++ b/client/index.html
@@ -291,7 +291,7 @@
         <div>
           Subscribe to Us !
         </div>
-        <div>
+        <div class="subscribe-input-btn">
           <input placeholder="Your email address" class="subscribe-input" type="text">
           <button class="footer-btn">Subscribe</button>
         </div>
