--- a/client/index.html
+++ b/client/index.html
@@ -359,6 +359,16 @@
         &#169; UnFold-all right reserved
       </div>
     </footer>
+     <script>
+      function leftScroll() {
+      const left = document.querySelector(".scroll-images");
+      left.scrollBy(-200, 0);
+    }
+    function rightScroll() {
+      const right = document.querySelector(".scroll-images");
+      right.scrollBy(200, 0);
+    }
+      </script>
   </body>
   
 </html>
