user page updated

--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -59,8 +59,8 @@
       <button class="left scroll-btn" onclick="leftScroll()"><</button>
       <div class="scroll-images">
         <div class="cover">
-          <div class="scroll-images">
-            <div class="blog-details">
+          <div class="scroll-images" id="i1">
+            <!-- <div class="blog-details">
               <div class="child">
                 <img src="./assets/women.jpg" alt="" />
               </div>
@@ -75,8 +75,8 @@
               <div class="desc2">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
               </div>
-            </div>
-            <div class="blog-details">
+            </div> -->
+            <!-- <div class="blog-details">
               <div class="child">
                 <img src="./assets/tower.jpg" alt="" />
               </div>
@@ -136,7 +136,7 @@
                   odit itaque porro!
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="child">
               <img src="./assets/blogPic.jpg" alt="" />
             </div>
@@ -359,16 +359,7 @@
         &#169; UnFold-all right reserved
       </div>
     </footer>
-     <script>
-      function leftScroll() {
-      const left = document.querySelector(".scroll-images");
-      left.scrollBy(-200, 0);
-    }
-    function rightScroll() {
-      const right = document.querySelector(".scroll-images");
-      right.scrollBy(200, 0);
-    }
-      </script>
+    <script src="script.js"></script>
   </body>
   
 </html>
