Connected blog with backend

--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -138,19 +138,19 @@
               </div>
             </div> -->
             <div class="child">
-              <img src="./assets/blogPic.jpg" alt="" />
+              <img src="../assets/blogPic.jpg" alt="" />
             </div>
             <div class="child">
-              <img src="./assets/blogPic.jpg" alt="" />
+              <img src="../assets/fit.jpg" alt="" />
             </div>
             <div class="child">
-              <img src="./assets/blogPic.jpg" alt="" />
+              <img src="../assets/plane.jpg" alt="" />
             </div>
             <div class="child">
-              <img src="./assets/blogPic.jpg" alt="" />
+              <img src="../assets/travel.jpg" alt="" />
             </div>
             <div class="child">
-              <img src="./assets/blogPic.jpg" alt="" />
+              <img src="../assets/women.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@
       <div class="follow-cards column">
         <div class="blog-details">
           <div class="child child-white">
-            <img src="./assets/travel.jpg" alt="" />
+            <img src="../assets/travel.jpg" alt="" />
           </div>
           <div class="tag-wrap">
             <ul class="tags">
@@ -191,7 +191,7 @@
       <div class="follow-cards column">
         <div class="blog-details">
           <div class="child child-white">
-            <img src="./assets/horror.jpg" alt="" />
+            <img src="../assets/horror.jpg" alt="" />
           </div>
           <div class="tag-wrap">
             <ul class="tags">
@@ -209,7 +209,7 @@
       <div class="follow-cards column">
         <div class="blog-details">
           <div class="child child-white">
-            <img src="./assets/fit.jpg" alt="" />
+            <img src="../assets/fit.jpg" alt="" />
           </div>
           <div class="tag-wrap">
             <ul class="tags">
@@ -227,7 +227,7 @@
       <div class="follow-cards column">
         <div class="blog-details">
           <div class="child child-white">
-            <img src="./assets/dish1.jpg" alt="" />
+            <img src="../assets/dish1.jpg" alt="" />
           </div>
           <div class="tag-wrap">
             <ul class="tags">
@@ -246,7 +246,7 @@
       <div class="follow-cards column">
         <div class="blog-details">
           <div class="child child-white">
-            <img src="./assets/dish2.jpg" alt="" />
+            <img src="../assets/dish2.jpg" alt="" />
           </div>
           <div class="tag-wrap">
             <ul class="tags">
@@ -264,7 +264,7 @@
       <div class="follow-cards column">
         <div class="blog-details">
           <div class="child child-white">
-            <img src="./assets/blogPic.jpg" alt="" />
+            <img src="../assets/blogPic.jpg" alt="" />
           </div>
           <div class="tag-wrap">
             <ul class="tags">
