--- a/client/User/index.html
+++ b/client/User/index.html
@@ -43,7 +43,7 @@
         <section id="profile-user">
             <div class="profile-user-wrap">
                 <div class="profile-user-img">
-                <img src="../../assets/person1.jpg" alt="" />
+                <img src="../assets/person1.jpg" alt="" />
                 </div>
                 <div class="profile-user-name">
                 <h1>John Doe</h1>
@@ -192,5 +192,6 @@
           </div>
           </section>
         </section>
+        <script src="script.js"></script>
 </body>
 </html>
