Fixed user and homepage

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="latest-cards row">
         <div class="follow-cards column">
-          <div class="blog-details">
+          <!-- <div class="blog-details">
             <div class="child child-white">
               <img src="../assets/travel.jpg" alt="" />
             </div>
@@ -164,8 +164,8 @@
             </div>
           </div>
         </div>
-        <div class="follow-cards column">
-          <div class="blog-details">
+        <div class="follow-cards column"> -->
+          <!-- <div class="blog-details">
             <div class="child child-white">
               <img src="../../assets/blogPic.jpg" alt="" />
             </div>
@@ -181,7 +181,23 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
           </div>
-        </div>
+          <div class="blog-details">
+            <div class="child child-white">
+              <img src="../../assets/blogPic.jpg" alt="" />
+            </div>
+            <div class="tag-wrap">
+              <ul class="tags">
+                <li>Design</li>
+                <li>Coding</li>
+                <li>Fun</li>
+              </ul>
+            </div>
+            <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
+            <div class="desc2 desc2-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+          </div> -->
+        <!-- </div> -->
       </div>
     </section>
   </section>
