user page updated

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -94,7 +94,7 @@
         <div class="follow-cards column">
           <div class="blog-details">
             <div class="child child-white">
-              <img src="../../assets/horror.jpg" alt="" />
+              <img src="../assets/horror.jpg" alt="" />
             </div>
             <div class="tag-wrap">
               <ul class="tags">
@@ -112,7 +112,7 @@
         <div class="follow-cards column">
           <div class="blog-details">
             <div class="child child-white">
-              <img src="../../assets/fit.jpg" alt="" />
+              <img src="../assets/fit.jpg" alt="" />
             </div>
             <div class="tag-wrap">
               <ul class="tags">
@@ -130,7 +130,7 @@
         <div class="follow-cards column">
           <div class="blog-details">
             <div class="child child-white">
-              <img src="../../assets/dish1.jpg" alt="" />
+              <img src="../assets/dish1.jpg" alt="" />
             </div>
             <div class="tag-wrap">
               <ul class="tags">
@@ -149,7 +149,7 @@
         <div class="follow-cards column">
           <div class="blog-details">
             <div class="child child-white">
-              <img src="../../assets/dish2.jpg" alt="" />
+              <img src="../assets/dish2.jpg" alt="" />
             </div>
             <div class="tag-wrap">
               <ul class="tags">
@@ -167,7 +167,7 @@
         <div class="follow-cards column">
           <div class="blog-details">
             <div class="child child-white">
-              <img src="../../assets/blogPic.jpg" alt="" />
+              <img src="../assets/blogPic.jpg" alt="" />
             </div>
             <div class="tag-wrap">
               <ul class="tags">
