edit blog icon added

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -13,8 +13,8 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Freehand&family=IBM+Plex+Sans:wght@300&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="/css/all/min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/css/all/min.css" />
+    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
   <title>Document</title>
 </head>
 
@@ -74,7 +74,7 @@
       </div>
       <div class="latest-cards row">
         <div class="follow-cards column">
-          <!-- <div class="blog-details">
+          <div class="blog-details">
             <div class="child child-white">
               <img src="../assets/travel.jpg" alt="" />
             </div>
@@ -83,6 +83,7 @@
                 <li>Design</li>
                 <li>Coding</li>
                 <li>Fun</li>
+                <i class="fa-regular fa-pen-to-square"></i>
               </ul>
             </div>
             <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -101,6 +102,7 @@
                 <li>Design</li>
                 <li>Coding</li>
                 <li>Fun</li>
+                <i class="fa-regular fa-pen-to-square"></i>
               </ul>
             </div>
             <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -119,6 +121,7 @@
                 <li>Design</li>
                 <li>Coding</li>
                 <li>Fun</li>
+                <i class="fa-regular fa-pen-to-square"></i>
               </ul>
             </div>
             <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -137,6 +140,7 @@
                 <li>Design</li>
                 <li>Coding</li>
                 <li>Fun</li>
+                <i class="fa-regular fa-pen-to-square"></i>
               </ul>
             </div>
             <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -156,6 +160,7 @@
                 <li>Design</li>
                 <li>Coding</li>
                 <li>Fun</li>
+                <i class="fa-regular fa-pen-to-square"></i>
               </ul>
             </div>
             <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -164,40 +169,25 @@
             </div>
           </div>
         </div>
-        <div class="follow-cards column"> -->
-          <!-- <div class="blog-details">
-            <div class="child child-white">
-              <img src="../assets/blogPic.jpg" alt="" />
-            </div>
-            <div class="tag-wrap">
-              <ul class="tags">
-                <li>Design</li>
-                <li>Coding</li>
-                <li>Fun</li>
-              </ul>
-            </div>
-            <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-            <div class="desc2 desc2-white">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          <div class="follow-cards column">
+            <div class="blog-details">
+              <div class="child child-white">
+                <img src="../assets/blogPic.jpg" alt="" />
+              </div>
+              <div class="tag-wrap">
+                <ul class="tags">
+                  <li>Design</li>
+                  <li>Coding</li>
+                  <li>Fun</li>
+                  <i class="fa-regular fa-pen-to-square"></i>
+                </ul>
+              </div>
+              <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
+              <div class="desc2 desc2-white">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </div>
             </div>
           </div>
-          <div class="blog-details">
-            <div class="child child-white">
-              <img src="../../assets/blogPic.jpg" alt="" />
-            </div>
-            <div class="tag-wrap">
-              <ul class="tags">
-                <li>Design</li>
-                <li>Coding</li>
-                <li>Fun</li>
-              </ul>
-            </div>
-            <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
-            <div class="desc2 desc2-white">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-          </div> -->
-        <!-- </div> -->
       </div>
     </section>
   </section>
