--- a/client/User/index.html
+++ b/client/User/index.html
@@ -25,7 +25,7 @@
     <div>
       <ul class="nav-list">
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/about">Compose</a></li>
         <li><a href="/contact">Contact</a></li>
         <i class="fas fa fa-search" style="color: white"></i>
         <input class="input" type="text" placeholder="Search.." />
@@ -191,6 +191,8 @@
       </div>
     </section>
   </section>
+
+  
   <script src="script.js"></script>
 </body>
 
