--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -26,16 +26,22 @@
     <section id="Landing">
       <!-- creating the nav -->
       <nav>
-        <div class="name">Un<span>Fold</span></div>
-        <div>
+        <!-- <div class="name">Un<span>Fold</span></div> -->
+        <!-- <div> -->
+          <a href="#" class="name">Un<span>Fold</span> </a>
           <ul class="nav-list">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
             <i class="fas fa fa-search" style="color: white"></i>
             <input class="input" type="text" placeholder="Search.." />
           </ul>
         </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
       </nav>
 
       <!-- creating upper-body-landing-page -->
@@ -57,12 +63,12 @@
         Checkout the latest <b>Blogs</b> here....
       </div>
     <div class="cover">
-      <button class="left scroll-btn" onclick="leftScroll()"><</button>
+      <!-- <button class="left scroll-btn" onclick="leftScroll()"><</button>  -->
       <div class="scroll-images">
         <div class="cover">
           <div class="scroll-images" id="i1">
-                </div>
-      <button class="right scroll-btn" onclick="rightScroll()">></button>
+          </div>
+      <!-- <button class="right scroll-btn" onclick="rightScroll()">></button> -->
     </div>
   </section>
   
