text issue resolved

--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -41,7 +41,9 @@
         </div>
         <!------------ blog description ------------- -->
       <section id="blog-description">
-  <div class="blog-content-description" id="blog-content-description" style="background: #929292">
+  <div class="blog-content-description" id="blog-content-description" style="background: white">
+    <p>jvnzcxknv </p>
+    <b>ovnidsonfo</b>
   </div>
         </section>
 
