--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -41,14 +41,10 @@
         </div>
         <!------------ blog description ------------- -->
       <section id="blog-description">
-  <div class="blog-content-description" id="blog-content-description" style="background: #929292">
-  </div>
-        </section>
-
-        <div class="partition">
-          
+        <div class="blog-content-description" id="blog-content-description" style="color:black">
         </div>
-    
+      </section>
+
         <section id="you-might-like-section">
           <div class="check-blogs-you-may-like">
             You might <strong style="color:#f8bf8c;">Also Like</strong> ....
