like and comment added

--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital@0;1&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Freehand&family=IBM+Plex+Sans:wght@300&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="/css/all/min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/css/all/min.css" />
+    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
   <title>Document</title>
 </head>
 
@@ -41,8 +41,28 @@
         </div>
         <!------------ blog description ------------- -->
       <section id="blog-description">
-  <div class="blog-content-description" id="blog-content-description" style="background: white">
-    
+  <div class="blog-content-description" id="blog-content-description">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sit illum similique? Maxime quae est praesentium
+    nesciunt, dolorem veniam quidem repudiandae molestiae, modi ipsa neque beatae consequatur libero et corporis repellat.
+    Ratione quisquam modi saepe. Eaque saepe quidem nam sapiente quo harum quia sint, quaerat ad deserunt necessitatibus
+    quos ipsam iusto fugit voluptas tempore vitae optio aliquid cumque laborum. Ea dolore maiores tempore et, molestias
+    obcaecati nemo! Rerum sit architecto inventore sint reprehenderit tempore quibusdam atque veritatis voluptas harum animi
+    iste, alias facilis veniam optio necessitatibus numquam cupiditate expedita debitis unde nam aperiam iusto! Corporis
+    iusto architecto ullam corrupti incidunt quis recusandae tempore similique! Dolore, voluptatibus ducimus! Dicta ipsum
+    soluta dolorum pariatur culpa aut, nam, minima suscipit, delectus voluptates mollitia minus velit repellat fugiat natus
+    perspiciatis ratione? Pariatur cum possimus ea reprehenderit facilis odit soluta quaerat, molestias labore porro, quia
+    magni inventore suscipit ab numquam unde vero iure fugiat est consequatur, animi eum obcaecati quis ipsa! Dolorum
+    aliquam quam ipsa excepturi ad eos ea accusantium. Nemo accusamus ab incidunt atque inventore temporibus ratione, fuga,
+    porro similique, est natus eius unde quisquam dolores eveniet? Iure nisi repudiandae quisquam recusandae ex natus at
+    voluptatem aut soluta laboriosam? Eum consectetur iure rerum reiciendis!
+    <div class="reactions">
+      <div class="like">g
+        <i class="fa-regular fa-heart" onclick="changeHeartIcon(this)"></i>
+      </div>
+      <div class="comment">
+        <i class="fa-regular fa-comment" onclick="changeCommentIcon(this)"></i>
+      </div>
+    </div>
   </div>
         </section>
 
@@ -68,6 +88,7 @@
                         <li>Design</li>
                         <li>Coding</li>
                         <li>Fun</li>
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet consectetur.</div>
@@ -82,6 +103,7 @@
                         <li>Design</li>
                         <li>Coding</li>
                         <li>Fun</li>
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet consectetur.</div>
@@ -96,6 +118,7 @@
                         <li>Design</li>
                         <li>Coding</li>
                         <li>Fun</li>
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet consectetur.</div>
@@ -110,6 +133,7 @@
                         <li>Design</li>
                         <li>Coding</li>
                         <li>Fun</li>
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet.</div>
@@ -124,6 +148,7 @@
                         <li>Design</li>
                         <li>Coding</li>
                         <li>Fun</li>
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet.</div>
@@ -137,7 +162,8 @@
                       <ul class="tags">
                         <li>Design</li>
                         <li>Coding</li>
-                        <li>Fun</li>
+                        <li>Fun</li>\
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet consectetur.</div>
@@ -152,6 +178,7 @@
                         <li>Design</li>
                         <li>Coding</li>
                         <li>Fun</li>
+                        <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
                       </ul>
                     </div>
                     <div class="blog-title">Lorem ipsum dolor sit amet consectetur.</div>
