--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -26,9 +26,10 @@
     <section id="Landing">
       <!-- creating the nav -->
       <nav>
-        <!-- <div class="name">Un<span>Fold</span></div> -->
-        <!-- <div> -->
+        <div class="logo">
+          <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
           <a href="#" class="name">Un<span>Fold</span> </a>
+        </div>
           <ul class="nav-list">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
@@ -72,7 +73,60 @@
     </div>
   </section>
   
-  
+  <section id="categories">
+    <h2 style="color: black;"><span>Categories</span> available....</h2>
+    <div class="category-wrap" id="category-id">
+      <!-- <div class="cat first">
+        <div class="cat-img">
+          <img src="../assets/dish1.jpg" alt="">
+        </div>
+        <div class="cat-name">
+          <span>Category 1</span>
+        </div>
+      </div>
+      <div class="cat">
+        <div class="cat-img">
+          <img src="../assets/fit.jpg" alt="">
+        </div>
+        <div class="cat-name">
+          <span>Category 2</span>
+        </div>
+      </div>
+      <div class="cat">
+        <div class="cat-img">
+          <img src="../assets/hike.jpg" alt="">
+        </div>
+        <div class="cat-name">
+          <span>Category 3</span>
+        </div>
+      </div>
+      <div class="cat">
+        <div class="cat-img">
+          <img src="../assets/lighthouse.jpg" alt="">
+        </div>
+        <div class="cat-name">
+          <span>Category 4</span>
+        </div>
+      </div>
+      <div class="cat">
+        <div class="cat-img">
+          <img src="../assets/blogPic.jpg" alt="">
+        </div>
+        <div class="cat-name">
+          <span>Category 5</span>
+        </div>
+      </div>
+      <div class="cat">
+        <div class="cat-img">
+          <img src="../assets/pexels-faruk-tokluoğlu-6777376.jpg" alt="">
+        </div>
+        <div class="cat-name">
+          <span>Category 6</span>
+        </div>
+      </div> -->
+    </div>
+
+  </section>
   
     <!----------------------------------------- Recent Blogs----------------------------- -->
     
