--- a/client/Blog-opening/blog-opening.html
+++ b/client/Blog-opening/blog-opening.html
@@ -22,16 +22,23 @@
   <section id="Landing">
     <!-- creating the nav -->
     <nav>
-      <div class="name">Un<span>Fold</span></div>
-      <div>
+      <div class="logo">
+        <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
+        <a href="#" class="name">Un<span>Fold</span> </a>
+      </div>
         <ul class="nav-list">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
           <i class="fas fa fa-search" style="color: white"></i>
           <input class="input" type="text" placeholder="Search.." />
         </ul>
       </div>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
     </nav>
 
     <main class="global-main">
@@ -56,7 +63,7 @@
     porro similique, est natus eius unde quisquam dolores eveniet? Iure nisi repudiandae quisquam recusandae ex natus at
     voluptatem aut soluta laboriosam? Eum consectetur iure rerum reiciendis!
     <div class="reactions">
-      <div class="like">g
+      <div class="like">
         <i class="fa-regular fa-heart" onclick="changeHeartIcon(this)"></i>
       </div>
       <div class="comment">
