--- a/client/blogedit/texteditor.html
+++ b/client/blogedit/texteditor.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
-  
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,19 +19,25 @@
 
 <body>
   
-    <nav>
-      <div class="name">Un<span>Fold</span></div>
-      <div>
-        <ul class="nav-list">
-
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <i class="fas fa fa-search" style="color: white"></i>
-          <input class="input" type="text" placeholder="Search.." />
-        </ul>
-      </div>
-    </nav>
+  <nav>
+    <div class="logo">
+      <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
+      <a href="#" class="name">Un<span>Fold</span> </a>
+    </div>
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+        <i class="fas fa fa-search" style="color: white"></i>
+        <input class="input" type="text" placeholder="Search.." />
+      </ul>
+    </div>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </nav>
 
   
         <h1 class="compose-blog"><span>Compose </span> Blog</h1>
