--- a/client/Homepage/index.html
+++ b/client/Homepage/index.html
@@ -78,54 +78,7 @@
   <section id="categories">
     <h2 style="color: black;"><span>Categories</span> available....</h2>
     <div class="category-wrap" id="category-id">
-      <!-- <div class="cat first">
-        <div class="cat-img">
-          <img src="../assets/dish1.jpg" alt="">
-        </div>
-        <div class="cat-name">
-          <span>Category 1</span>
-        </div>
-      </div>
-      <div class="cat">
-        <div class="cat-img">
-          <img src="../assets/fit.jpg" alt="">
-        </div>
-        <div class="cat-name">
-          <span>Category 2</span>
-        </div>
-      </div>
-      <div class="cat">
-        <div class="cat-img">
-          <img src="../assets/hike.jpg" alt="">
-        </div>
-        <div class="cat-name">
-          <span>Category 3</span>
-        </div>
-      </div>
-      <div class="cat">
-        <div class="cat-img">
-          <img src="../assets/lighthouse.jpg" alt="">
-        </div>
-        <div class="cat-name">
-          <span>Category 4</span>
-        </div>
-      </div>
-      <div class="cat">
-        <div class="cat-img">
-          <img src="../assets/blogPic.jpg" alt="">
-        </div>
-        <div class="cat-name">
-          <span>Category 5</span>
-        </div>
-      </div>
-      <div class="cat">
-        <div class="cat-img">
-          <img src="../assets/pexels-faruk-tokluoğlu-6777376.jpg" alt="">
-        </div>
-        <div class="cat-name">
-          <span>Category 6</span>
-        </div>
-      </div> -->
+     
     </div>
 
   </section>
@@ -149,6 +102,7 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
+              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -167,6 +121,7 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
+              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -185,6 +140,7 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
+              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -203,6 +159,7 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
+              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -222,6 +179,7 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
+              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
@@ -240,6 +198,7 @@
               <li>Design</li>
               <li>Coding</li>
               <li>Fun</li>
+              <i onclick="changeBookmarkIcon(this)" class="fa-regular fa-bookmark"></i>
             </ul>
           </div>
           <div class="desc desc-white">Lorem ipsum dolor sit amet consectetur.</div>
