--- a/client/compose/texteditor.html
+++ b/client/compose/texteditor.html
@@ -21,19 +21,25 @@
 
 <body>
   
-    <nav>
-      <div class="name">Un<span>Fold</span></div>
-      <div>
-        <ul class="nav-list">
-
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <i class="fas fa fa-search" style="color: white"></i>
-          <input class="input" type="text" placeholder="Search.." />
-        </ul>
-      </div>
-    </nav>
+  <nav>
+    <div class="logo">
+      <img src="../assets/High Resolution Logo - Transparent Background.png" alt="">
+      <a href="#" class="name">Un<span>Fold</span> </a>
+    </div>
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+        <i class="fas fa fa-search" style="color: white"></i>
+        <input class="input" type="text" placeholder="Search.." />
+      </ul>
+    </div>
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </div>
+  </nav>
 
   
         <h1 class="compose-blog"><span>Compose </span> Blog</h1>
