follower/following fetched

--- a/client/User/index.html
+++ b/client/User/index.html
@@ -59,6 +59,20 @@
       </div>
       <div class="user-desc">
       </div>
+      
+      
+      <section id="categories">
+        <h2 style="color: rgb(255, 255, 255);"><span>Your</span> Followers....</h2>
+        <div class="category-wrap follower-class" id="category-id followers-id">
+        </div>
+      </section>
+
+
+      <section id="categories">
+        <h2 style="color: rgb(255, 255, 255);"><span>Your</span> Followings....</h2>
+        <div class="category-wrap followings-class" id="category-id followings-id">
+        </div>
+      </section>
   </section>
 
   <!--______________________ MYBLOGS_____________________ -->
